Added post example files

--- a/Week 3/slides/pages/post.html
+++ b/Week 3/slides/pages/post.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <form action="api/post" method="post">
+    <form action="post/form" method="post">
       <div>
         <label for="say">What greeting do you want to say?</label>
         <input name="say" id="say" value="Hi">
